[package]
name = "antimpeu"
version = "1.1.1"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
crossterm = "0.29"
ratatui = "0.29"
chrono = "0.4"
aes-gcm = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_core = "0.6"
typenum = "1.16"
whoami = "1.2"
clap = { version = "4", features = ["derive"] }
pbkdf2 = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
rpassword = "7"

